--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,15 @@ li {-webkit-transition: all .3s ease-in 0s;-moz-transition: all .3s ease-in 0s;-
 .container{ background-color:#ece8dd}
 .header {background-color: #a0785c;padding-bottom: 10px;}
 .header-title{
-  color: #38c3ea;font-weight: bold;font-family: vevey;font-size: 1.2em;letter-spacing: .15em;text-shadow: #CCC 1px 0 10px;text-transform: uppercase; line-height: 1em;
+  color: #38c3ea;font-weight: bold;font-family: vevey;font-size: 1.1em;letter-spacing: .15em;text-shadow: #CCC 1px 0 10px;text-transform: uppercase; line-height: 1.2em;
 }
 .search-box
 {color: #38c3ea;background-color: #ece8dd; padding-left: 5px; padding-right: 50px;margin-top: 15px;margin-left: 50%; border-radius: 7px;font-weight: bolder;font-family: RobotoLight;font-size: 1.2em;letter-spacing: .15em;line-height: 3em;}
 .search input::-webkit-input-placeholder {color: #38c3ea;}
 #map {overflow: hidden;position: relative; padding: 0;margin: 0;margin-top:30px; background-color: #fff; text-align: center;height: 600px;}
+#cofeesList{
+	color: #6cc3ea;background-color: #a0785c;height: 600px;margin-top:30px;font-family: RobotoLight;font-weight:bolder;position: relative;overflow: hidden;
+}
+#cofeesList .items-list{
+	margin-top: 40px;text-transform: uppercase;font-size: 1.2em;background-color: #ece8dd;padding: 5px;cursor:pointer;
+}
