--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,48 @@
 /* Our Base */
 @font-face{src:url(../fonts/RobotoLight.ttf);font-family: RobotoLight;font-weight: 2000; font-size:100;} 
 @font-face{font-family: vevey; src:url(../fonts/vevey.ttf);font-weight: normal;} 
+@font-face{font-family: IsabelleLayne; src:url(../fonts/IsabelleLayne.ttf);font-weight: normal;} 
 
 * { Box-sizing: Border-box ; -webkit-box-sizing: border-box; -moz-box-sizing: border-box;} 
 
 ol, ul,a ,li {list-style: none;text-decoration:none;}
-
-body{padding: 0px;margin: 0;}
+html{width: 100%;}
+body{padding: 0px;margin: 0;width: 100%;}
 li {-webkit-transition: all .3s ease-in 0s;-moz-transition: all .3s ease-in 0s;-ms-transition: all .3s ease-in 0s;-o-transition: all .3s ease-in 0s;transition: all .3s ease-in 0s;}
 .container{ background-color:#ece8dd}
-.header {background-color: #a0785c;padding-bottom: 10px;}
+.header {background-color: #4d7b98;padding-bottom: 10px;}
 .header-title{
-  color: #38c3ea;font-weight: bold;font-family: vevey;font-size: 1.1em;letter-spacing: .15em;text-shadow: #CCC 1px 0 10px;text-transform: uppercase; line-height: 1.2em;
+  color: #ece8dd;
 }
+.header-title h1{font-weight: bolder;font-family: IsabelleLayne;font-size: 2em;letter-spacing: .15em;text-shadow: #ccc 1px 0 3px;text-transform: uppercase; line-height: 1.2em;}
 .search-box
-{color: #38c3ea;text-transform: uppercase; background-color: #ece8dd; padding-left: 5px; padding-right: 20px;margin-top: 15px;margin-left: 56%; border-radius: 5px;font-weight: bolder;font-family: RobotoLight;font-size: 1.1em;letter-spacing: .10em;line-height: 3em;}
-.search input::-webkit-input-placeholder {color: #38c3ea;}
+{color: #4d7b98;text-transform: uppercase; background-color: #ece8dd;padding-left: 10px; width: 220px; margin-top: 15px;margin-left: 56%; border-radius: 5px;font-weight:bolder;font-family: IsabelleLayne;font-size: 1.4em;letter-spacing: .10em;line-height: 3em;}
+.search input::-webkit-input-placeholder {color:#4d7b98;}
 #map {overflow: hidden;position: relative; padding: 0;margin: 0;margin-top:30px; background-color: #fff; text-align: center;height: 800px;}
+
 #cofeesList{
-	color: #6cc3ea;background-color: #a0785c;height: 800px;margin-top:30px;font-family: RobotoLight;font-weight:bolder;position: relative;overflow: hidden;
+	color: #4d7b98;background-color:#4d7b98;height: 800px;margin-top:30px;font-family: RobotoLight;font-weight:bolder;position: relative;overflow: hidden;
 }
 #cofeesList .items-list{
 	margin-top: 40px;text-transform: uppercase;font-size: 1.2em;background-color: #ece8dd;padding: 5px;cursor:pointer;
 }
-@media screen and (max-width: 483px) and (min-width: 372px) {
+@media only screen and (max-width : 959px){
 
-    .header-title {
-       font-size: 12px;
+    .header-title h1{
+       font-size: 26px;
+       margin: 0 auto;
+        margin-left: 47px;
+       letter-spacing:0em;
     }
+
     #cofeesList .items-list{
-        font-size: 12px;
+        font-size: 15px;
+
     }
-    #search-box {
-         font-size: 12px;
+    .search-box {
+         font-size: 18px;
+         margin: 0 auto; 
+         margin-left: 45px;}
 }
-}
+
+
