--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,17 @@ li {-webkit-transition: all .3s ease-in 0s;-moz-transition: all .3s ease-in 0s;-
 .header {background-color: #4d7b98;padding-bottom: 10px;}
 .header-title{color: #ece8dd;}
 .header-title h1{font-weight: bolder;font-family: IsabelleLayne;font-size: 2em;letter-spacing: .15em;text-shadow: #ccc 1px 0 3px;text-transform: uppercase;line-height: 1.2em;text-align: right;}
-.search-box{color: #4d7b98;text-transform: uppercase;background-color: #f3f1ed;padding-left: 10px;width: 220px;margin-top: 15px;margin-right: 56%;border-radius: 5px;font-weight:bolder;font-family: IsabelleLayne;font-size: 1.4em;letter-spacing: .10em;line-height: 3em;}
+.search-box{color: #4d7b98;text-transform: uppercase;background-color: #f3f1ed;padding-left: 10px;width: 220px;margin-top: 15px;margin-left: 56%;border-radius: 5px;font-weight:bolder;font-family: IsabelleLayne;font-size: 1.4em;letter-spacing: .10em;line-height: 3em;}
 .search input::-webkit-input-placeholder {color:#4d7b98;}
 #map {overflow: hidden;position: relative; padding: 0;margin: 0;margin-top:30px; background-color: #fff; text-align: center;height: 800px;}
 #cofeesList{color: #4d7b98;background-color:#4d7b98;height: 800px;margin-top:30px;font-family: RobotoLight;font-weight:bolder;position: relative;overflow: hidden;}
 #cofeesList li:hover {color:#f7584c;background-color: #4d7b98; }
 #cofeesList .items-list{margin-top: 40px;text-transform: uppercase;font-size: 1.2em;background-color: #f3f1ed;padding: 5px;cursor:pointer;}
-.header-title , .search{float: right;}
-
+.header-title  {float: left;}
+/*.search{float: right;}*/
+ #cofeeList {float: right;}
+ .mapp {float: left;}
 /***************************/
 @media only screen and (max-width : 959px){.header{height: 150px;}.header-title h1{font-size: 26px;margin: 0 auto;margin-left: 47px;letter-spacing:0em;}#cofeesList .items-list{font-size: 15px;}.search-box {font-size: 18px;margin: 0 auto; margin-left: 45px;}}
-@media only screen and (max-width : 768px){.header-title , .search{float: none;}.search-box,.header-title h1{font-size: 22px; margin-right: auto; margin-left: auto; display: block;}.header-title h1{text-align: center; padding-bottom: 20px;padding-top:20px;}}
+@media only screen and (max-width : 768px){ .mapp,#cofeeList {float: none;} .header-title , .search{float: none;}.search-box,.header-title h1{font-size: 22px; margin-right: auto; margin-left: auto; display: block;}.header-title h1{text-align: center; padding-bottom: 20px;padding-top:20px;}}
 
